# vacation-time

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  index.html  package.json  pyproject.toml  render.yaml  requirements.txt  test-functionality.md
app/: main.py
app/api/: routes.py
app/core/: calendar_gen.py  holidays.py  optimizer.py
app/models/: schemas.py
app/templates/: base.html  index.html  results.html
src/: App.tsx
src/components/: Calendar.tsx  CalendarContainer.tsx  CalendarExport.tsx  CalendarViewToggle.tsx  CountrySelector.tsx  MobileDrawer.tsx  QuarterCalendar.tsx  TouchSwipe.tsx  VacationInput.tsx  VacationRecommendations.tsx  YearCalendar.tsx
src/data/: countryHolidays.ts  holidays.ts
src/types/: index.ts
src/utils/: calendarExport.ts  dateUtils.ts  storageService.ts  vacationOptimizer.ts
static/: style.css
tests/: test_holidays.py  test_optimizer.py
